fix: link to the Samouczek

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body style="font-size: 3em">
     <a style="display:block" href="https://drive.google.com/drive/folders/1utC-NpokgAVYZFe4gqqE4tzqWZ24byIg?usp=sharing">dysk EITI</a>
     <a style="display:block" href="https://www.facebook.com/groups/EITI.NOWI">Grupa FB wydziału</a>
-    <a style="display:block" href="https://www.facebook.com/groups/EITI.NOWI">Samouczek z matmy / fizyki (do 27 listopada)</a> 
+    <a style="display:block" href="https://samouczek.pw.edu.pl/">Samouczek z matmy / fizyki (do 27 listopada)</a> 
 </body>
 </html>
