--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body style="font-size: 3em">
     <a style="display:block" href="https://drive.google.com/drive/folders/1utC-NpokgAVYZFe4gqqE4tzqWZ24byIg?usp=sharing">dysk EITI</a>
     <a style="display:block" href="https://www.facebook.com/groups/EITI.NOWI">Grupa FB wydziału</a>
-    <a style="display:block" href="https://samouczek.pw.edu.pl/">Samouczek z matmy / fizyki (do 27 listopada)</a> 
+    <a style="display:block" href="https://samouczek.pw.edu.pl/">Samouczek z matmy / fizyki (do 27 listopada)</a>
+    <a style="display:block" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Fdrive%2Ffolders%2F1-9dBcbgvLDLODJbKJmbuFjfkG4NXu8nn&h=AT1CX8hBG2HfufzKAvG_z3CEzfAfFIic2Jw5lQfu59iJ0UFK7npNYapnoqpmAgyXNpdwPu8WBbeZjLJ4hLgtvaKEFEgRSvuvWcypqKbMzpg0q0PAid_02XQ8VOXW8KKLgGnyeZLGYWMxlaA&s=1">Przeróżne książki</a>
     Quote book (soon)
 </body>
 </html>
