--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <a style="display:block" href="https://samouczek.pw.edu.pl/">Samouczek z matmy / fizyki (do 27 listopada)</a>
     <a style="display:block" href="https://drive.google.com/drive/folders/1-9dBcbgvLDLODJbKJmbuFjfkG4NXu8nn">Przeróżne książki</a>
     Quote book (soon)
+</br>
+ Składka na dysk Google (3zł)
+ nr. konta: 31 1140 2004 0000 3102 7849 9657
+ nr. do blika: 570 227 229
+ w tytule: Dysk, [imie i nazwisko], mail
+ ew. pytania: Borowy Alan na grupce / borowyalan@gmail.com
 </body>
 </html>
