add another drive link and intructions how to get access to it

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drogowskaz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body style="font-size: 3em">
     <a style="display:block" href="https://drive.google.com/drive/folders/1utC-NpokgAVYZFe4gqqE4tzqWZ24byIg?usp=sharing">dysk EITI</a>
+    <a style="display:block" href="https://drive.google.com/drive/u/0/folders/1YZbHqM3IsId-6QOuP5kGRL64GrNhKDEJ">Dysk Elektroniki</a>
     <a style="display:block" href="https://www.facebook.com/groups/EITI.NOWI">Grupa FB wydziału</a>
     <a style="display:block" href="https://samouczek.pw.edu.pl/">Samouczek z matmy / fizyki (do 27 listopada)</a>
     <a style="display:block" href="https://drive.google.com/drive/folders/1-9dBcbgvLDLODJbKJmbuFjfkG4NXu8nn">Przeróżne książki</a>
+    
     Quote book (soon)
 </br>
  <p>
@@ -26,6 +29,18 @@
  </p>
  <p>
      ew. pytania: Borowy Alan na grupce / borowyalan@gmail.com
+ </p>
+ <p>
+     Aby otrzymać dostęp do dysku należy dołączyć do grupy Google pod linkiem:
+ </p>
+ 
+ <a href="https://groups.google.com/g/elektronika-pw">https://groups.google.com/g/elektronika-pw</a>
+ 
+ <p>Konto którym dołączamy musi być kontem Google, ale niekoniecznie na domenie "@gmail.com".
+ Konto to jest potrzebne tylko i wyłącznie aby łatwo nadawać i zmieniać dostęp do dysku.</p>
+ 
+ <p>
+     Następnie, aby wyszukać już właściwy dysk, wchodzimy na stronę Google Drive'a (bądz na apkę) i wchodzimy w zakładkę "Shared" (Udostępnione dla mnie). Tam powinien pojawić sie współdzielony folder "Elektronika PW".
  </p>
 </body>
 </html>
