--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
  <a href="https://groups.google.com/g/elektronika-pw">https://groups.google.com/g/elektronika-pw</a>
  
  <p>Konto którym dołączamy musi być kontem Google, ale niekoniecznie na domenie "@gmail.com".
- Konto to jest potrzebne tylko i wyłącznie aby łatwo nadawać i zmieniać dostęp do dysku.</p>
+ Grupa Google jest potrzebna tylko i wyłącznie aby łatwo nadawać i zmieniać dostęp do dysku.</p>
  
  <p>
-     Następnie, aby wyszukać już właściwy dysk, wchodzimy na stronę Google Drive'a (bądz na apkę) i wchodzimy w zakładkę "Shared" (Udostępnione dla mnie). Tam powinien pojawić sie współdzielony folder "Elektronika PW".
+     Aby wyszukać już właściwy dysk, wchodzimy na stronę Google Drive'a (bądz na apkę) i wchodzimy w zakładkę "Shared" (Udostępnione dla mnie). Tam powinien pojawić się współdzielony folder "Elektronika PW".
  </p>
 </body>
 </html>
