add direct link to acces drive in the instruction & styling

--- a/index.html
+++ b/index.html
@@ -1,46 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drogowskaz</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body style="font-size: 3em">
-    <a style="display:block" href="https://drive.google.com/drive/folders/1utC-NpokgAVYZFe4gqqE4tzqWZ24byIg?usp=sharing">dysk EITI</a>
-    <a style="display:block" href="https://drive.google.com/drive/u/0/folders/1YZbHqM3IsId-6QOuP5kGRL64GrNhKDEJ">Dysk Elektroniki</a>
-    <a style="display:block" href="https://www.facebook.com/groups/EITI.NOWI">Grupa FB wydziału</a>
-    <a style="display:block" href="https://samouczek.pw.edu.pl/">Samouczek z matmy / fizyki (do 27 listopada)</a>
-    <a style="display:block" href="https://drive.google.com/drive/folders/1-9dBcbgvLDLODJbKJmbuFjfkG4NXu8nn">Przeróżne książki</a>
-    
-    Quote book (soon)
-</br>
- <p>
-     Składka na dysk Google (3zł)
- </p>
- <p>
-     nr. konta: 31 1140 2004 0000 3102 7849 9657
- </p>
- <p>
-     nr. do blika: 570 227 229
- </p>
- <p>
-     w tytule: Dysk, [imie i nazwisko], mail
- </p>
- <p>
-     ew. pytania: Borowy Alan na grupce / borowyalan@gmail.com
- </p>
- <p>
-     Aby otrzymać dostęp do dysku należy dołączyć do grupy Google pod linkiem:
- </p>
- 
- <a href="https://groups.google.com/g/elektronika-pw">https://groups.google.com/g/elektronika-pw</a>
- 
- <p>Konto którym dołączamy musi być kontem Google, ale niekoniecznie na domenie "@gmail.com".
- Grupa Google jest potrzebna tylko i wyłącznie aby łatwo nadawać i zmieniać dostęp do dysku.</p>
- 
- <p>
-     Aby wyszukać już właściwy dysk, wchodzimy na stronę Google Drive'a (bądz na apkę) i wchodzimy w zakładkę "Shared" (Udostępnione dla mnie). Tam powinien pojawić się współdzielony folder "Elektronika PW".
- </p>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body style="font-size: 3em">
+    <ul>
+      <li>
+        <a
+          style="display: block"
+          href="https://drive.google.com/drive/folders/1utC-NpokgAVYZFe4gqqE4tzqWZ24byIg?usp=sharing"
+          >dysk EITI</a
+        >
+      </li>
+      <li>
+        <a
+          style="display: block"
+          href="https://drive.google.com/drive/u/0/folders/1YZbHqM3IsId-6QOuP5kGRL64GrNhKDEJ"
+          >Dysk Elektroniki</a
+        >
+      </li>
+      <li>
+        <a
+          style="display: block"
+          href="https://www.facebook.com/groups/EITI.NOWI"
+          >Grupa FB wydziału</a
+        >
+      </li>
+      <li>
+        <a style="display: block" href="https://samouczek.pw.edu.pl/"
+          >Samouczek z matmy / fizyki (do 27 listopada)</a
+        >
+      </li>
+      <li>
+        <a
+          style="display: block"
+          href="https://drive.google.com/drive/folders/1-9dBcbgvLDLODJbKJmbuFjfkG4NXu8nn"
+          >Przeróżne książki</a
+        >
+      </li>
+      <li>Quote book (soon)</li>
+    </ul>
+    <div id="driveInstructions">
+      <hr />
+      <h2>Google Drive:</h2>
+      <p>Składka na dysk Google (3zł)</p>
+      <p>nr. konta: 31 1140 2004 0000 3102 7849 9657</p>
+      <p>nr. do blika: 570 227 229</p>
+      <p>w tytule: Dysk, [imie i nazwisko], mail</p>
+      <p>ew. pytania: Borowy Alan na grupce / borowyalan@gmail.com</p>
+      <hr />
+      <p>
+        Aby otrzymać dostęp do dysku należy dołączyć do grupy Google pod
+        linkiem:
+      </p>
+
+      <a href="https://groups.google.com/g/elektronika-pw"
+        >https://groups.google.com/g/elektronika-pw</a
+      >
+
+      <p>
+        Konto którym dołączamy musi być kontem Google, ale niekoniecznie na
+        domenie "@gmail.com". Grupa Google jest potrzebna tylko i wyłącznie aby
+        łatwo nadawać i zmieniać dostęp do dysku.
+      </p>
+
+      <p>
+        Aby wyszukać już właściwy dysk, wchodzimy na stronę Google Drive'a (bądz
+        na apkę) i wchodzimy w zakładkę "Shared" (Udostępnione dla mnie). Tam
+        powinien pojawić się współdzielony folder "Elektronika PW". Lub
+        wchodzimy bezpośrednio z linku:
+      </p>
+
+      <a
+        href="https://drive.google.com/drive/folders/1YZbHqM3IsId-6QOuP5kGRL64GrNhKDEJ?usp=sharing"
+        >Dysk Elektroniki</a
+      >
+    </div>
+  </body>
 </html>
