fix / add links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,18 @@
         >
       </li>
       <li>
+        <a style="display: block" href="https://mat-fiz.pw.edu.pl/"
+          >Samouczek z matmy / fizyki</a
+        >
+      </li>
+      <li>
         <a style="display: block" href="https://samouczek.pw.edu.pl/"
-          >Samouczek z matmy / fizyki (do 27 listopada)</a
+          >Samouczek dla kandydatów</a
+        >
+      </li>
+      <li>
+        <a style="display: block" href="http://www.wel.ise.pw.edu.pl/"
+          >Strona labów WEL</a
         >
       </li>
       <li>
