dzieki Dawid Dudek

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         >
       </li>
       <li>
-        <a style="display: block" href="https://mat-fiz.pw.edu.pl/"
+        <a style="display: block" href="https://samouczek.pw.edu.pl/user"
           >Samouczek z matmy / fizyki</a
         >
       </li>
       <li>
-        <a style="display: block" href="https://samouczek.pw.edu.pl/"
+        <a style="display: block" href="https://mat-fiz-samouczek.pw.edu.pl/node"
           >Samouczek dla kandydatów</a
         >
       </li>
