add discord link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
       <li>
         <a
           style="display: block"
+          href="https://discord.gg/qAPsdF2Ww6"
+          >Discord</a
+        >
+      </li>
+      
+      <li>
+        <a
+          style="display: block"
           href="https://www.facebook.com/groups/EITI.NOWI"
           >Grupa FB wydziału</a
         >
